--- a/Python/260127.md
+++ b/Python/260127.md
@@ -7,3 +7,5 @@
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/7869c357-097e-4dad-959d-4d9a48203a7f" />
 
 https://fastapi.tiangolo.com/reference/apirouter/#fastapi.APIRouter
+
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/95774b2b-d4e8-4f85-b851-4431f115bc2b" />
