--- a/Python/260128.md
+++ b/Python/260128.md
@@ -26,3 +26,189 @@ app.add_middleware(
 - headers: 밑에 캡쳐한 부분 (로컬서버 > 네트워크 > 잘 보면 헤더 있음)
 
 <img width="926" height="720" alt="image" src="https://github.com/user-attachments/assets/682ecbad-236b-409d-915e-68cfc7333327" />
+
+이제 return이 중요해진다.
+
+home.jsx에
+```
+      .then(res => console.log(res.data))
+```
+- data 추가
+
+json으로 주고 받을 때 BaseModel 사용함
+
+html -> jsx로 변경
+study18>frontend>src>pages>login.jsx
+```
+import axios from "axios"
+import { useState } from "react"
+
+const Login = () => {
+    const [email, setEmail] = useState("")
+    const [pwd, setPwd] = useState("")
+
+    const submitEvent = e => {
+        e.preventDefault()
+        console.log(e.target)
+    }
+    return(
+		<div className="container mt-3">
+			<h1 className="display-1 text-center">로그인</h1>
+			<form onSubmit={submitEvent} >
+				<div className="mb-3 mt-3">
+					<label htmlFor="email" className="form-label">이메일</label>
+					<input type="email" className="form-control" id="email" placeholder="이메일를 입력하세요." name="email" value={email} onChange={e => setEmail(e.target.value)}/>
+				</div>
+				<div className="mb-3">
+					<label htmlFor="pwd" className="form-label">비밀번호</label>
+					<input type="password" className="form-control" id="pwd" placeholder="비밀번호를 입력하세요." name="pwd" value={pwd} onChange={e => setPwd(e.target.value)}/>
+				</div>
+			<div className="d-flex">
+				<div className="p-2 flex-fill d-grid">
+					<button href="../index.html" className="btn btn-primary">로그인</button>
+				</div>
+				<div className="p-2 flex-fill d-grid">
+					<button href="../index.html" className="btn btn-primary">취소</button>
+				</div>
+            </div>
+			</form>
+		</div>
+    )
+}
+
+export default Login
+```
+
+
+
+
+study18>backend>main.py
+```
+# 한 줄 요약: React에서 오는 로그인 요청을 받아서 세션에 사용자 정보를 저장하고, 이후 요청에서 “로그인 상태”를 확인하는 FastAPI 서버
+# 단순 API 모음이 아니라 로그인 상태를 기억하는 서버
+from fastapi import FastAPI, Request
+from fastapi.middleware.cors import CORSMiddleware
+from starlette.middleware.sessions import SessionMiddleware
+from pydantic import BaseModel
+
+# React랑 통신할 수 있게 만드는 부분 (CORS)
+# 이게 없으면? 브라우저가 요청 자체를 막아버림 / 서버는 잘 돌아가는데 프론트에서 에러 남
+origins = [
+  "http://localhost:5173"
+]
+
+# 로그인 데이터 계약서
+# 이건 DB 모델 아니고 "이 API는 이런 형태의 JSON만 받겠다"는 선언
+class LoginModel(BaseModel):
+  # React에서 보내는 데이터:
+  email: str
+  pwd: str
+
+# FastAPI는 자동으로: 구조, 타입 검사 및 에러 처리 (프론트 ↔ 백엔드 약속을 코드로 박아둔 것)
+app = FastAPI()
+# 서버의 기억력
+# 세션이 없으면? 서버는 매 요청마다 내가 누군지 모름, 로그인해도 다음 요청에선 다시 남
+# 세션이 있으면? 쿠키 기반으로 브라우저와 연결됨
+# 지금 구조: 로그인 성공 → 서버 메모리에 저장, 이후 요청 → 같은 브라우저면 확인 가능
+app.add_middleware(
+    CORSMiddleware,
+    allow_origins=origins,
+    allow_credentials=True,
+    allow_methods=["*"],
+    allow_headers=["*"],
+)
+app.add_middleware(
+    SessionMiddleware, 
+    secret_key="your-long-random-secret-key",
+    # Optional parameters:
+    same_site="none",
+    https_only=False,
+    max_age=3600, # (1 hour)
+)
+
+@app.get("/")
+def read_root():
+  return {"status": True, "result": ["공유는 해드림"]}
+
+# 엔드포인트 흐름 (이 코드의 핵심) - 로그인 요청
+# 여기서 일어나는 일: React가 email / pwd를 보냄 -> FastAPI가 LoginModel로 자동 파싱 -> email을 세션에 저장
+@app.post("/login")
+def login(loginModel: LoginModel, request: Request):
+  # 이 순간: 이 브라우저는 이제 로그인 상태로 됨
+  request.session["email"] = loginModel.email
+  return {"status": True, "model": loginModel}
+
+# 로그인 상태 확인
+# 여기서는 ID/PW 다시 안 받음
+@app.get("/user")
+def user(request: Request):
+  # 대신 서버의 기억을 조회 (있으면 -> 로그인 상태, 없으면 -> 비로그인 상태)
+  # 즉, 인증의 기준이 ‘세션’
+  email = request.session.get("email")
+  if email:
+    return {"status": True, "me": email}
+  else:
+    return {"status": False}
+```
+
+강사님이 만들어준 axios 사용한 login
+study18>frontend>src>pages>login.jsx
+```
+import axios from "axios"
+
+const api = axios.create({
+  baseURL: "http://localhost:8000",
+  withCredentials: true,
+  headers: {
+    "Content-Type": "application/json",
+  },
+})
+
+const Login = () => {
+  const submitEvent = e => {
+    e.preventDefault()
+
+    const params = {
+      "email": e.target.email.value,
+      "pwd": e.target.pwd.value
+    } 
+    api.post("/login", params)
+    .then(res => console.log(res))
+    .catch(err => console.error(err))
+
+  }
+  const checkEvent = () => {
+
+    api.get("/user")
+    .then(res => console.log(res))
+    .catch(err => console.error(err))
+
+  }
+  return (
+    <div className="container mt-3">
+			<h1 className="display-1 text-center">로그인</h1>
+			<form onSubmit={submitEvent}>
+				<div className="mb-3 mt-3">
+					<label htmlFor="email" className="form-label">이메일</label>
+					<input type="email" className="form-control" id="email" placeholder="이메일를 입력하세요." name="email" required={true} autoComplete="off" />
+				</div>
+				<div className="mb-3">
+					<label htmlFor="pwd" className="form-label">비밀번호</label>
+					<input type="password" className="form-control" id="pwd" placeholder="비밀번호를 입력하세요." name="pwd" required={true} autoComplete="off" />
+				</div>
+        <div className="d-flex">
+          <div className="p-2 flex-fill d-grid">
+            <button type="submit" className="btn btn-primary">로그인</button>
+          </div>
+          <div className="p-2 flex-fill d-grid">
+            <button type="button" className="btn btn-primary" onClick={checkEvent}>취소</button>
+          </div>
+        </div>
+			</form>
+		</div>
+  )
+}
+
+export default Login
+```
+
