--- a/260205.md
+++ b/260205.md
@@ -25,3 +25,84 @@ docker ps
 <img width="969" height="1040" alt="image" src="https://github.com/user-attachments/assets/9fff76fe-e7d2-4495-a386-80cfeddb10b0" />
 <img width="1270" height="1040" alt="image" src="https://github.com/user-attachments/assets/c27f43fe-aac6-46d0-89e0-a20b523b686c" />
 
+확인 후 VSCode
+```
+FROM ubuntu:24.04
+
+RUN apt update
+RUN apt install -y nginx
+
+COPY ./nginx/index.html usr/share/nginx/html/index.html
+
+EXPOSE 80
+
+CMD [ "nginx", "-g", "daemon off;" ]
+````
+
+터미널 명령어:
+docker build -t web:1 .    
+docker rm -f web
+docker run -d -p 80:80 --name web web:1
+
+이거하고 docker 들어가서 
+1) container 전부 삭제
+2) images 전부 삭제
+3) builds 전부 삭제
+
+이후 frontend 폴더 만들어서 터미널 열고:
+npm create vite .
+npm i
+
+vite.config.js
+```
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+
+// https://vite.dev/config/
+export default defineConfig({
+  plugins: [react()],
+  base: "/",
+  server: {
+      host: true
+  },
+})
+```
+
+frontend 폴더에도 dockerfile 만듦
+```
+FROM node:24.13.0
+```
+
+터미널: 
+npm run build
+
+이후 frontend 폴더에도 dockerfile
+```
+FROM node:24.13.0 as build
+
+WORKDIR /app
+
+COPY package.json ./
+RUN npm install
+
+COPY . .
+
+RUN npm run build
+
+FROM nginx:1.28
+
+COPY --from=build /app/dist /usr/share/nginx/html 
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
+```
+
+터미널: 
+docker build -t react:0.1 .
+docker images (잘 깔렸나 확인)
+docker run -d -p 80:80 --name web react:0.1
+docker ps
+
+localhost 들어가면 짜잔 리액트 실행 가능한
+<img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/3e826bb5-acce-4e05-8b17-c72360d1f461" />
