--- a/260205.md
+++ b/260205.md
@@ -16,12 +16,12 @@ EXPOSE 80
 CMD [ "nginx", "-g", "daemon off;" ]
 ```
 
-터미널 명령어:
-dir (<- dockerfile이 뜨는지 확인 후 진행하기)
-docker build -t web:0.1 .
-docker images
-docker run -d -p 80:80 --name web web:0.1
-docker ps
+터미널 명령어:<br />
+dir (<- dockerfile이 뜨는지 확인 후 진행하기)<br />
+docker build -t web:0.1 .<br />
+docker images<br />
+docker run -d -p 80:80 --name web web:0.1<br />
+docker ps<br />
 <img width="969" height="1040" alt="image" src="https://github.com/user-attachments/assets/9fff76fe-e7d2-4495-a386-80cfeddb10b0" />
 <img width="1270" height="1040" alt="image" src="https://github.com/user-attachments/assets/c27f43fe-aac6-46d0-89e0-a20b523b686c" />
 
@@ -39,19 +39,19 @@ EXPOSE 80
 CMD [ "nginx", "-g", "daemon off;" ]
 ````
 
-터미널 명령어:
-docker build -t web:1 .    
-docker rm -f web
-docker run -d -p 80:80 --name web web:1
+터미널 명령어:<br />
+docker build -t web:1 .<br />
+docker rm -f web<br />
+docker run -d -p 80:80 --name web web:1<br />
 
-이거하고 docker 들어가서 
-1) container 전부 삭제
-2) images 전부 삭제
-3) builds 전부 삭제
+이거하고 docker 들어가서<br />
+1) container 전부 삭제<br />
+2) images 전부 삭제<br />
+3) builds 전부 삭제<br />
 
-이후 frontend 폴더 만들어서 터미널 열고:
-npm create vite .
-npm i
+이후 frontend 폴더 만들어서 터미널 열고:<br />
+npm create vite .<br />
+npm i<br />
 
 vite.config.js
 ```
@@ -73,8 +73,8 @@ frontend 폴더에도 dockerfile 만듦
 FROM node:24.13.0
 ```
 
-터미널: 
-npm run build
+터미널:<br />
+npm run build<br />
 
 이후 frontend 폴더에도 dockerfile
 ```
@@ -98,11 +98,11 @@ EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 ```
 
-터미널: 
-docker build -t react:0.1 .
-docker images (잘 깔렸나 확인)
-docker run -d -p 80:80 --name web react:0.1
-docker ps
+터미널:<br />
+docker build -t react:0.1 .<br />
+docker images (잘 깔렸나 확인)<br />
+docker run -d -p 80:80 --name web react:0.1<br />
+docker ps<br />
 
-localhost 들어가면 짜잔 리액트 실행 가능한
+localhost 들어가 짜잔 리액트 실행 가능한<br />
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/3e826bb5-acce-4e05-8b17-c72360d1f461" />
