--- a/260205.md
+++ b/260205.md
@@ -106,3 +106,114 @@ docker ps<br />
 
 localhost 들어가 짜잔 리액트 실행 가능한<br />
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/3e826bb5-acce-4e05-8b17-c72360d1f461" />
+
+이제 부트스트랩 깔고 리액트 깔고 frontend 에서 아래 두 파일 만듦
+
+App.jsx
+```
+import "bootstrap/dist/css/bootstrap.min.css";
+import "bootstrap/dist/js/bootstrap.bundle.min.js";
+import { BrowserRouter, Routes, Route } from "react-router";
+import NotFound from './NotFound.jsx'
+
+const Home = () => {
+  return (
+    <div className="text-center">
+      <h1>메인 화면입니다.</h1>
+    </div>
+  )
+}
+
+const App = () => {
+  const paths = [
+    {path: "/", element: <Home />},
+    {path: "*", element: <NotFound />},
+  ]
+  return (
+    <>
+      <BrowserRouter>
+        <Routes>
+          { paths?.map((v, i) => <Route key={i} path={v.path} element={v.element} />) }
+        </Routes>
+      </BrowserRouter>
+    </>
+  )
+}
+
+export default App
+```
+
+NotFound.jsx
+```
+const NotFound = () => {
+  return (
+    <div className="text-center">
+      <h1>404</h1>
+      <p>페이지를 찾을 수 없습니다.</p>
+    </div>
+  )
+}
+
+export default NotFound
+```
+
+
+<img width="1113" height="1040" alt="image" src="https://github.com/user-attachments/assets/d3e3e430-d5f5-4015-8c03-49cfa902ce6e" />
+
+frontend 파일 안에 default.conf 파일 생성 후
+```
+server {
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
+
+    #access_log  /var/log/nginx/host.access.log  main;
+  
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+
+    location / {
+       try_files $uri /index.html;
+  }
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+
+    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+    #
+    #location ~ \.php$ {
+    #    proxy_pass   http://127.0.0.1;
+    #}
+
+    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+    #
+    #location ~ \.php$ {
+    #    root           html;
+    #    fastcgi_pass   127.0.0.1:9000;
+    #    fastcgi_index  index.php;
+    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+    #    include        fastcgi_params;
+    #}
+
+    # deny access to .htaccess files, if Apache's document root
+    # concurs with nginx's one
+    #
+    #location ~ /\.ht {
+    #    deny  all;
+    #}
+}
+
+```
+
+터미널:
+docker rm -f web (기존꺼 지우고)
+docker build -t react:0.1 .
+docker run -d -p 80:80 --name web react:0.1
+
+새로 build 해주고 화면 잘 뜨는지 확인
