--- a/260205.md
+++ b/260205.md
@@ -1,3 +1,9 @@
+교재(도커&쿠버네티스)의 p.24-52까지 실행해봤는데 이거는 예정 방식이래서 안적었어요 ㅎ 몰라도 됩니다.
+
+========================
+5교시
+========================
+
 VSCode
 
 dockerfile 생성 (역할: 설계도)
@@ -68,6 +74,10 @@ export default defineConfig({
 })
 ```
 
+========================
+6교시
+========================
+
 frontend 폴더에도 dockerfile 만듦
 ```
 FROM node:24.13.0
@@ -106,6 +116,10 @@ docker ps<br />
 
 localhost 들어가 짜잔 리액트 실행 가능한<br />
 <img width="1920" height="1040" alt="image" src="https://github.com/user-attachments/assets/3e826bb5-acce-4e05-8b17-c72360d1f461" />
+
+========================
+7교시
+========================
 
 이제 부트스트랩 깔고 리액트 깔고 frontend 에서 아래 두 파일 만듦
 
@@ -157,10 +171,11 @@ const NotFound = () => {
 export default NotFound
 ```
 
+도커에서 /etc/nginx/conf.d/default.conf 경로로 가서 아래와 같이 내용 수정
 
 <img width="1113" height="1040" alt="image" src="https://github.com/user-attachments/assets/d3e3e430-d5f5-4015-8c03-49cfa902ce6e" />
 
-frontend 파일 안에 default.conf 파일 생성 후
+위의 html 에서 frontend 파일 안에 default.conf 파일 생성 후 위에 수정된 코드 그대로 복붙
 ```
 server {
     listen       80;
@@ -211,9 +226,13 @@ server {
 
 ```
 
-터미널:
-docker rm -f web (기존꺼 지우고)
-docker build -t react:0.1 .
-docker run -d -p 80:80 --name web react:0.1
+터미널:<br />
+docker rm -f web (기존꺼 지우고)<br />
+docker build -t react:0.1 .<br />
+docker run -d -p 80:80 --name web react:0.1<br />
 
-새로 build 해주고 화면 잘 뜨는지 확인
+새로 build 해주고 화면 잘 뜨는지 확인<br />
+
+========================
+8교시
+========================
