--- a/Python/260206(kafka).md
+++ b/Python/260206(kafka).md
@@ -8,3 +8,13 @@
 - MSG 1을 브로커가 만들면 컨슈머에 옮겨지고 브로커에서는 사라짐
 - Producer, Consumer: 우리가 만드는 애들
 - Broker: Kafka가 담당
+
+==============
+3교시
+==============
+
+컨슈머 부분:
+<img width="979" height="512" alt="image" src="https://github.com/user-attachments/assets/38a37263-82e3-4304-a14a-7bc23ec43f07" />
+
+프로듀서 부분:
+<img width="890" height="322" alt="image" src="https://github.com/user-attachments/assets/ac11808d-b9ae-49b9-ab8d-78d303a24335" />
