--- a/Python/260206(kafka).md
+++ b/Python/260206(kafka).md
@@ -20,3 +20,12 @@
 <img width="890" height="322" alt="image" src="https://github.com/user-attachments/assets/ac11808d-b9ae-49b9-ab8d-78d303a24335" />
 
 https://narawantsgohome.notion.site/26-02-06-2ffcb949b1a1801cb937d64ae00de525
+
+
+==============
+5교시
+==============
+
+FastAPI mail:
+https://sabuhish.github.io/fastapi-mail/example/
+
